# substreams-foundational-modules

./: .gitignore
aelf-common/: Cargo.toml  Makefile  buf.gen.yaml  substreams.yaml
aelf-common/proto/sf/substreams/aelf/v1/: event.proto  state.proto  transaction.proto
aelf-common/src/: event.rs  lib.rs  state.rs  transaction.rs
aelf-common/src/pb/: mod.rs  sf.substreams.aelf.v1.rs
cosmos-common/: Cargo.toml  README.md  derived-substreams-example.yaml  substreams.yaml
injective-common/: README.md  substreams.yaml
mantra-common/: README.md  substreams.yaml
solana-accounts-common/: Makefile  README.md  buf.gen.yaml  buf.yaml  generated.go  go.mod  go.sum  index.go  main.go  main_test.go  substreams.yaml
solana-accounts-common/pb/proto/sf/substreams/solana/type/v1/: type.pb.go  type_vtproto.pb.go
solana-accounts-common/pb/sf/solana/type/v1/: type.pb.go  type_vtproto.pb.go
solana-accounts-common/pb/sf/substreams/index/v1/: keys.pb.go
solana-accounts-common/pb/sf/substreams/solana/type/v1/: type.pb.go  type_vtproto.pb.go
solana-accounts-common/proto/: buf.gen.yaml  buf.yaml
solana-accounts-common/proto/sf/substreams/solana/type/v1/: type.proto
